@@ -1,3 +1,4 @@
+	* slight performance fix in disk elevator algorithm
 	* fixed potential issue where a piece could be checked twice
 	* fixed build issue on windows related to GetCompressedSize()
 	* fixed deadlock when starting torrents with certain invalid tracker URLs
